# typelet

./: CHANGELOG.md  README.md  typelet.cabal
.github/workflows/: haskell-ci.yml
benchmarks/: Makefile  benchmarks.gnuplot
doctest-examples/: DoctestExamplesTypeLet.hs
src/: TypeLet.hs
src/TypeLet/: Plugin.hs  UserAPI.hs
src/TypeLet/Plugin/: Constraints.hs  Errors.hs  GhcTcPluginAPI.hs  NameResolution.hs  Substitution.hs  Util.hs
test/: TestTypeLet.hs
test/Test/: Invalid.hs  Sanity.hs
test/Test/Size/: Setup.hs
test/Test/Size/Ap/Baseline/: Baseline010.hs  Baseline020.hs  Baseline030.hs  Baseline040.hs  Baseline050.hs  Baseline060.hs  Baseline070.hs  Baseline080.hs  Baseline090.hs  Baseline100.hs
test/Test/Size/Ap/Index/: Ix010.hs  Ix020.hs  Ix030.hs  Ix040.hs  Ix050.hs  Ix060.hs  Ix070.hs  Ix080.hs  Ix090.hs  Ix100.hs
test/Test/Size/Ap/Let/: Let010.hs  Let020.hs  Let030.hs  Let040.hs  Let050.hs  Let060.hs  Let070.hs  Let080.hs  Let090.hs  Let100.hs
test/Test/Size/HList/: Setup.hs
test/Test/Size/HList/Baseline/: Baseline010.hs  Baseline020.hs  Baseline030.hs  Baseline040.hs  Baseline050.hs  Baseline060.hs  Baseline070.hs  Baseline080.hs  Baseline090.hs  Baseline100.hs
test/Test/Size/HList/Index/: Ix010.hs  Ix020.hs  Ix030.hs  Ix040.hs  Ix050.hs  Ix060.hs  Ix070.hs  Ix080.hs  Ix090.hs  Ix100.hs
test/Test/Size/HList/LetAs/: LetAs010.hs  LetAs020.hs  LetAs030.hs  LetAs040.hs  LetAs050.hs  LetAs060.hs  LetAs070.hs  LetAs080.hs  LetAs090.hs  LetAs100.hs
test/Test/Size/HList/LetAsCPS/: LetAsCPS010.hs  LetAsCPS020.hs  LetAsCPS030.hs  LetAsCPS040.hs  LetAsCPS050.hs  LetAsCPS060.hs  LetAsCPS070.hs  LetAsCPS080.hs  LetAsCPS090.hs  LetAsCPS100.hs
