cabal-version:      2.4
name:               typelet
version:            0.1.0.0
synopsis:           Plugin to faciliate type-level let
description:        For a certain class of programs, type-level let is essential
                    in order to be able to write these programs in such a way
                    that they do not result in ghc core that is quadratic in
                    size. Type-level let is not explicitly supported in ghc,
                    but we can encode it. The @typelet@ library provides a
                    type-checker plugin that makes the encoding more convenient
                    to use as well as more effective.
bug-reports:        https://github.com/well-typed/typelet/issues
license:            BSD-3-Clause
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
copyright:          Well-Typed LLP, Juspay Technologies Pvt Ltd
category:           Plugin
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        TypeLet
    other-modules:
        TypeLet.Plugin
        TypeLet.Plugin.Constraints
        TypeLet.Plugin.NameResolution
        TypeLet.Plugin.Substitution
        TypeLet.Plugin.Util
        TypeLet.UserAPI
    build-depends:
        base >= 4.13 && < 4.14

        -- TODO: bounds
      , containers

        -- whichever version is bundled with ghc:
      , ghc
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    default-extensions:
        FlexibleInstances
        GADTs
        KindSignatures
        MultiParamTypeClasses
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
    other-extensions:
    ghc-options:
        -Wall

test-suite test-typelet
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        TestTypeLet.hs
    build-depends:
        base
      , typelet
