cabal-version:      2.4
name:               typelet
version:            0.1.0.0
synopsis:           Plugin to faciliate type-level let
description:        For a certain class of programs, type-level let is essential
                    in order to be able to write these programs in such a way
                    that they do not result in ghc core that is quadratic in
                    size. Type-level let is not explicitly supported in ghc,
                    but we can encode it. The @typelet@ library provides a
                    type-checker plugin that makes the encoding more convenient
                    to use as well as more effective.
bug-reports:        https://github.com/well-typed/typelet/issues
license:            BSD-3-Clause
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
copyright:          Well-Typed LLP, Juspay Technologies Pvt Ltd
category:           Plugin
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        TypeLet
        TypeLet.UserAPI
    other-modules:
        TypeLet.Plugin
        TypeLet.Plugin.Constraints
        TypeLet.Plugin.NameResolution
        TypeLet.Plugin.Substitution
        TypeLet.Plugin.Util
    build-depends:
        base >= 4.13 && < 4.14

        -- TODO: bounds
      , containers

        -- whichever version is bundled with ghc:
      , ghc
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    default-extensions:
        FlexibleInstances
        GADTs
        KindSignatures
        MultiParamTypeClasses
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
    other-extensions:
    ghc-options:
        -Wall

test-suite test-typelet
    default-language:
        Haskell2010
    default-extensions:
        DataKinds
        FlexibleInstances
        GADTs
        KindSignatures
        MultiParamTypeClasses
        PolyKinds
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        TestTypeLet.hs
    other-modules:
        Test.Invalid
        Test.Sanity
        Test.Size.Ap.Baseline.Baseline010
        Test.Size.Ap.Baseline.Baseline020
        Test.Size.Ap.Baseline.Baseline030
        Test.Size.Ap.Baseline.Baseline040
        Test.Size.Ap.Baseline.Baseline050
        Test.Size.Ap.Baseline.Baseline060
        Test.Size.Ap.Baseline.Baseline070
        Test.Size.Ap.Baseline.Baseline080
        Test.Size.Ap.Baseline.Baseline090
        Test.Size.Ap.Baseline.Baseline100
        Test.Size.Ap.Index.Ix010
        Test.Size.Ap.Index.Ix020
        Test.Size.Ap.Index.Ix030
        Test.Size.Ap.Index.Ix040
        Test.Size.Ap.Index.Ix050
        Test.Size.Ap.Index.Ix060
        Test.Size.Ap.Index.Ix070
        Test.Size.Ap.Index.Ix080
        Test.Size.Ap.Index.Ix090
        Test.Size.Ap.Index.Ix100
        Test.Size.Ap.Let.Let010
        Test.Size.Ap.Let.Let020
        Test.Size.Ap.Let.Let030
        Test.Size.Ap.Let.Let040
        Test.Size.Ap.Let.Let050
        Test.Size.Ap.Let.Let060
        Test.Size.Ap.Let.Let070
        Test.Size.Ap.Let.Let080
        Test.Size.Ap.Let.Let090
        Test.Size.Ap.Let.Let100
        Test.Size.HList.Baseline.Baseline010
        Test.Size.HList.Baseline.Baseline020
        Test.Size.HList.Baseline.Baseline030
        Test.Size.HList.Baseline.Baseline040
        Test.Size.HList.Baseline.Baseline050
        Test.Size.HList.Baseline.Baseline060
        Test.Size.HList.Baseline.Baseline070
        Test.Size.HList.Baseline.Baseline080
        Test.Size.HList.Baseline.Baseline090
        Test.Size.HList.Baseline.Baseline100
        Test.Size.HList.Index.Ix010
        Test.Size.HList.Index.Ix020
        Test.Size.HList.Index.Ix030
        Test.Size.HList.Index.Ix040
        Test.Size.HList.Index.Ix050
        Test.Size.HList.Index.Ix060
        Test.Size.HList.Index.Ix070
        Test.Size.HList.Index.Ix080
        Test.Size.HList.Index.Ix090
        Test.Size.HList.Index.Ix100
        Test.Size.HList.LetAs.LetAs010
        Test.Size.HList.LetAs.LetAs020
        Test.Size.HList.LetAs.LetAs030
        Test.Size.HList.LetAs.LetAs040
        Test.Size.HList.LetAs.LetAs050
        Test.Size.HList.LetAs.LetAs060
        Test.Size.HList.LetAs.LetAs070
        Test.Size.HList.LetAs.LetAs080
        Test.Size.HList.LetAs.LetAs090
        Test.Size.HList.LetAs.LetAs100
        Test.Size.HList.LetAsCPS.LetAsCPS010
        Test.Size.HList.LetAsCPS.LetAsCPS020
        Test.Size.HList.LetAsCPS.LetAsCPS030
        Test.Size.HList.LetAsCPS.LetAsCPS040
        Test.Size.HList.LetAsCPS.LetAsCPS050
        Test.Size.HList.LetAsCPS.LetAsCPS060
        Test.Size.HList.LetAsCPS.LetAsCPS070
        Test.Size.HList.LetAsCPS.LetAsCPS080
        Test.Size.HList.LetAsCPS.LetAsCPS090
        Test.Size.HList.LetAsCPS.LetAsCPS100
        Test.Size.Setup
    build-depends:
        base
      , typelet
      , tasty
      , tasty-hunit
      , tasty-quickcheck
    ghc-options:
        -Wall

    if flag(use-ghc-dump)
      cpp-options:
          -DUSE_GHC_DUMP
      build-depends:
          ghc-dump-core

Flag use-ghc-dump
  Description: Use ghc-dump (for size measurements)
  Default: False
